--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-
+// Test toString methods
 Point3 Todo: 
     // Add tests to ensure objects remain thesame after operations are performed
     // objects are different after operation
