--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 // Test toString methods 
 // Test equals methods
 // test getters and setters
+// test constructors
 Point3 Todo: 
     // Add tests to ensure objects remain thesame after operations are performed
     // objects are different after operation
